





import java.util.List;
import java.util.ArrayList;

public class Parameter  {






    private EssentialOCL::Variable essentialocl::variable;


    public Parameter(
    ) {
    }



    public EssentialOCL::Variable getEssentialocl::variable() {
        return essentialocl::variable;
    }

    public void setEssentialocl::variable(EssentialOCL::Variable essentialocl::variable) {
        this.essentialocl::variable = essentialocl::variable;
    }

}