





import java.util.List;
import java.util.ArrayList;

public class Variable  {




    public Variable(
    ) {
    }




}