





import java.util.List;
import java.util.ArrayList;

public class ActionPattern  {




    public ActionPattern(
    ) {
    }




}