





import java.util.List;
import java.util.ArrayList;

public class JvmTypedObj  {




    public JvmTypedObj(
    ) {
    }




}