





import java.util.List;
import java.util.ArrayList;

public class NamedObj  {




    public NamedObj(
    ) {
    }




}