





import java.util.List;
import java.util.ArrayList;

public class caltrop_FunctionDeclaration extends JvmTypedObj {






    private caltrop_CaltropActorImpl caltrop_caltropactorimpl;


    public caltrop_FunctionDeclaration(
    ) {
        super(
        );
    }



    public caltrop_CaltropActorImpl getCaltrop_caltropactorimpl() {
        return caltrop_caltropactorimpl;
    }

    public void setCaltrop_caltropactorimpl(caltrop_CaltropActorImpl caltrop_caltropactorimpl) {
        this.caltrop_caltropactorimpl = caltrop_caltropactorimpl;
    }

}