





import java.util.List;
import java.util.ArrayList;

public class caltrop_OutputPattern extends PortPattern {






    private caltrop_OutputAction caltrop_outputaction;


    public caltrop_OutputPattern(
    ) {
        super(
        );
    }



    public caltrop_OutputAction getCaltrop_outputaction() {
        return caltrop_outputaction;
    }

    public void setCaltrop_outputaction(caltrop_OutputAction caltrop_outputaction) {
        this.caltrop_outputaction = caltrop_outputaction;
    }

}