





import java.util.List;
import java.util.ArrayList;

public class caltrop_PortPattern  {






    private caltrop_XExpression caltrop_xexpression;




    private caltrop_XExpression caltrop_xexpression;


    public caltrop_PortPattern(
    ) {
    }



    public caltrop_XExpression getCaltrop_xexpression() {
        return caltrop_xexpression;
    }

    public void setCaltrop_xexpression(caltrop_XExpression caltrop_xexpression) {
        this.caltrop_xexpression = caltrop_xexpression;
    }
    public caltrop_XExpression getCaltrop_xexpression() {
        return caltrop_xexpression;
    }

    public void setCaltrop_xexpression(caltrop_XExpression caltrop_xexpression) {
        this.caltrop_xexpression = caltrop_xexpression;
    }

}