





import java.util.List;
import java.util.ArrayList;

public class caltrop_Transition  {

    private String tags;





    private caltrop_State caltrop_state;




    private caltrop_State caltrop_state;




    private caltrop_State caltrop_state;


    public caltrop_Transition(
        String tags    ) {
        this.tags = tags;
    }


    public String getTags() {
        return tags;
    }

    public void setTags(String tags) {
        this.tags = tags;
    }

    public caltrop_State getCaltrop_state() {
        return caltrop_state;
    }

    public void setCaltrop_state(caltrop_State caltrop_state) {
        this.caltrop_state = caltrop_state;
    }
    public caltrop_State getCaltrop_state() {
        return caltrop_state;
    }

    public void setCaltrop_state(caltrop_State caltrop_state) {
        this.caltrop_state = caltrop_state;
    }
    public caltrop_State getCaltrop_state() {
        return caltrop_state;
    }

    public void setCaltrop_state(caltrop_State caltrop_state) {
        this.caltrop_state = caltrop_state;
    }

}