





import java.util.List;
import java.util.ArrayList;

public class caltrop_TypedOutputPort extends AbstractTypedIOPort {




    public caltrop_TypedOutputPort(
    ) {
        super(
        );
    }




}