





import java.util.List;
import java.util.ArrayList;

public class caltrop_XExpression  {






    private caltrop_OutputAction caltrop_outputaction;




    private caltrop_OutputAction caltrop_outputaction;




    private caltrop_ExpressionChannelSelector caltrop_expressionchannelselector;




    private caltrop_FunctionDeclaration caltrop_functiondeclaration;




    private caltrop_OutputPattern caltrop_outputpattern;




    private caltrop_EventPattern caltrop_eventpattern;




    private caltrop_EventPattern caltrop_eventpattern;




    private caltrop_OutputAction caltrop_outputaction;




    private caltrop_OutputAction caltrop_outputaction;


    public caltrop_XExpression(
    ) {
    }



    public caltrop_OutputAction getCaltrop_outputaction() {
        return caltrop_outputaction;
    }

    public void setCaltrop_outputaction(caltrop_OutputAction caltrop_outputaction) {
        this.caltrop_outputaction = caltrop_outputaction;
    }
    public caltrop_OutputAction getCaltrop_outputaction() {
        return caltrop_outputaction;
    }

    public void setCaltrop_outputaction(caltrop_OutputAction caltrop_outputaction) {
        this.caltrop_outputaction = caltrop_outputaction;
    }
    public caltrop_ExpressionChannelSelector getCaltrop_expressionchannelselector() {
        return caltrop_expressionchannelselector;
    }

    public void setCaltrop_expressionchannelselector(caltrop_ExpressionChannelSelector caltrop_expressionchannelselector) {
        this.caltrop_expressionchannelselector = caltrop_expressionchannelselector;
    }
    public caltrop_FunctionDeclaration getCaltrop_functiondeclaration() {
        return caltrop_functiondeclaration;
    }

    public void setCaltrop_functiondeclaration(caltrop_FunctionDeclaration caltrop_functiondeclaration) {
        this.caltrop_functiondeclaration = caltrop_functiondeclaration;
    }
    public caltrop_OutputPattern getCaltrop_outputpattern() {
        return caltrop_outputpattern;
    }

    public void setCaltrop_outputpattern(caltrop_OutputPattern caltrop_outputpattern) {
        this.caltrop_outputpattern = caltrop_outputpattern;
    }
    public caltrop_EventPattern getCaltrop_eventpattern() {
        return caltrop_eventpattern;
    }

    public void setCaltrop_eventpattern(caltrop_EventPattern caltrop_eventpattern) {
        this.caltrop_eventpattern = caltrop_eventpattern;
    }
    public caltrop_EventPattern getCaltrop_eventpattern() {
        return caltrop_eventpattern;
    }

    public void setCaltrop_eventpattern(caltrop_EventPattern caltrop_eventpattern) {
        this.caltrop_eventpattern = caltrop_eventpattern;
    }
    public caltrop_OutputAction getCaltrop_outputaction() {
        return caltrop_outputaction;
    }

    public void setCaltrop_outputaction(caltrop_OutputAction caltrop_outputaction) {
        this.caltrop_outputaction = caltrop_outputaction;
    }
    public caltrop_OutputAction getCaltrop_outputaction() {
        return caltrop_outputaction;
    }

    public void setCaltrop_outputaction(caltrop_OutputAction caltrop_outputaction) {
        this.caltrop_outputaction = caltrop_outputaction;
    }

}