





import java.util.List;
import java.util.ArrayList;

public class Relation  {






    private QVTRelation_RelationImplementation qvtrelation_relationimplementation;




    private QVTRelation_RelationCallExp qvtrelation_relationcallexp;


    public Relation(
    ) {
    }



    public QVTRelation_RelationImplementation getQvtrelation_relationimplementation() {
        return qvtrelation_relationimplementation;
    }

    public void setQvtrelation_relationimplementation(QVTRelation_RelationImplementation qvtrelation_relationimplementation) {
        this.qvtrelation_relationimplementation = qvtrelation_relationimplementation;
    }
    public QVTRelation_RelationCallExp getQvtrelation_relationcallexp() {
        return qvtrelation_relationcallexp;
    }

    public void setQvtrelation_relationcallexp(QVTRelation_RelationCallExp qvtrelation_relationcallexp) {
        this.qvtrelation_relationcallexp = qvtrelation_relationcallexp;
    }

}